Enhance OneNote MCP server with new tools, resources, and configuration updates. Added 16 tools for full read/write access to OneNote, updated OAuth scopes, and introduced new transport mode configurations. Improved CI/CD workflows with type checking, linting, and formatting checks. Updated package dependencies and added new documentation for architecture and API patterns.

--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,9 @@ ONENOTE_OAUTH_CLIENT_SECRET=
 ONENOTE_OAUTH_REDIRECT_URI=http://localhost:3000/callback
 
 # Space-delimited scopes requested during OAuth.
-# Defaults to: offline_access openid profile User.Read Notes.Read
-# ONENOTE_OAUTH_SCOPES=offline_access openid profile User.Read Notes.Read
+# Defaults to: offline_access openid profile User.Read Notes.ReadWrite
+# Notes.ReadWrite is required for tools that create, update, or delete pages and sections.
+# ONENOTE_OAUTH_SCOPES=offline_access openid profile User.Read Notes.ReadWrite
 
 # Token cache file path (optional, uses platform default if not set)
 # Default locations:
@@ -48,3 +49,20 @@ ONENOTE_OAUTH_REDIRECT_URI=http://localhost:3000/callback
 
 # Optional base URL override for Microsoft Graph
 # ONENOTE_GRAPH_BASE_URL=https://graph.microsoft.com/v1.0
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Transport mode (default: stdio)
+# ─────────────────────────────────────────────────────────────────────────────
+
+# Transport mode. Set to "http" for HTTP+SSE with OAuth (e.g., for MCP Inspector).
+# Default is "stdio" for direct LLM integration.
+# MCP_TRANSPORT=http
+
+# HTTP server host (default: 127.0.0.1)
+# MCP_SERVER_HOST=127.0.0.1
+
+# HTTP server port (default: 3001)
+# MCP_SERVER_PORT=3001
+
+# OAuth issuer URL (default: http://localhost:{port})
+# MCP_ISSUER_URL=http://localhost:3001
