--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onenote-mcp",
-  "version": "0.1.0",
+  "version": "0.1.0-rc.1",
   "description": "Model Context Protocol (MCP) server scaffold for Microsoft OneNote via OAuth",
   "type": "module",
   "main": "./dist/index.js",
